--- a/templates/clinics/clinicDashboard.html
+++ b/templates/clinics/clinicDashboard.html
@@ -71,8 +71,29 @@
                 </li>
                 <li>
                   <a href="javascript:void(0)" class="nav-link link-body-emphasis" data-target="section5">
-                    <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
-                  
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 16">
+                      <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492M5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0"/>
+                      <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115z"/>
+                    </svg>
+                  تنظیمات
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" class="nav-link link-body-emphasis" data-target="section6">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-key" viewBox="0 0 16 16">
+                      <path d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0L13 9.207l-.646.647a.5.5 0 0 1-.708 0L11 9.207l-.646.647a.5.5 0 0 1-.708 0L9 9.207l-.646.647A.5.5 0 0 1 8 10h-.535A4 4 0 0 1 0 8m4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h.63l.853-.854a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.793-.793-1-1h-6.63a.5.5 0 0 1-.451-.285A3 3 0 0 0 4 5"/>
+                      <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                    </svg>
+                    تغییر رمز عبور
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" class="nav-link link-body-emphasis" data-target="section7">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-x" viewBox="0 0 16 16">
+                      <path d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m.256 7a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"/>
+                      <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m-.646-4.854.646.647.646-.647a.5.5 0 0 1 .708.708l-.647.646.647.646a.5.5 0 0 1-.708.708l-.646-.647-.646.647a.5.5 0 0 1-.708-.708l.647-.646-.647-.646a.5.5 0 0 1 .708-.708"/>
+                    </svg>
+                    حذف حساب
                   </a>
                 </li>
               </ul>
@@ -83,11 +104,12 @@
                 </a>
                 <ul class="dropdown-menu text-small shadow">
                   <li><a class="dropdown-item" href="#">خروج</a></li>
-                  <li><a class="dropdown-item" href="#">تغییر رمز عبور</a></li>
+                  <li><a class="dropdown-item" href="#">تغییر عکس کاربری</a></li>
                 </ul>
               </div>
             </div>
         </div>
+        <!--sections-->
             <div class="d-flex col-md-9 justify-content-center align-items-center">
               <!--section1-->
                 <form action ="{% url 'cprofile' %}" class="row dashboard-section" method="post" enctype="multipart/form-data" id="section1">
@@ -244,56 +266,107 @@
                 </div>
               </div>
             
-            <!--section4-->
-            <div class="container w-75 dashboard-section" id="section4">
-              <div class="card rounded-5 shadow-lg my-2">
-                <div class="card-body  text-primary">
-                    <div class="row justify-content-center ">
-                        <div class="col-md-12 text-center">
-                          <div class="row justify-content-center">
-                            <hr class="col-md-4 mt-3">
-                            <p class="col-md-2 text-primary">سوالات  من</p>
-                            <hr class="col-md-4 mt-3">
+                          <!--section4-->
+              <div class="container w-75 dashboard-section" id="section4">
+                <div class="card rounded-5 shadow-lg my-2">
+                  <div class="card-body  text-primary">
+                      <div class="row justify-content-center ">
+                          <div class="col-md-12 text-center">
+                            <div class="row justify-content-center">
+                              <hr class="col-md-4 mt-3">
+                              <p class="col-md-2 text-primary">سوالات  من</p>
+                              <hr class="col-md-4 mt-3">
+                            </div>
                           </div>
-                        </div>
-                        {% if questions %}
-                        
-                        <div class="b-example-divider"></div>
-                        {% for question in questions %}
-                          <div class="col-md-12 accordion-item">
-                            <h2 class="accordion-header mb-3">
-                              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ question.id }}" aria-expanded="true" aria-controls="collapse{{ question.id }}">
-                                عنوان سوال:
-                                <span class="text-muted">{{ question.question_text }}</span>
-                              </button>
-                            </h2>
-                            <div id="collapse{{ question.id }}" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                              <div class="accordion-body">
-                                <div class="mb-3">
-                                  <label for="exampleFormControlTextarea1" class="form-label"></label>
-                                  {% if not question.is_answered %}
-                                  <form method="post" action="{% url 'answerQuestion'%}">
-                                    {% csrf_token %}
-                                    <input type="hidden" name="id" value="{{ question.id }}">
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="جواب خود را بنویسید"></textarea>
-                                </div>
-                                <div class="col-md-12 mx-1">
-                                  <div class="d-flex flex-row-reverse">
-                                    <button type="submit" class="btn btn-outline-secondary">ارسال</button>
-                                  </form>
-                                  {% else %}
-                                    <p>Answer: {{ question.answer_text }}</p>
-                                  {% endif %}
+                          {% if questions %}
+                          
+                          <div class="b-example-divider"></div>
+                          {% for question in questions %}
+                            <div class="col-md-12 accordion-item">
+                              <h2 class="accordion-header mb-3">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ question.id }}" aria-expanded="true" aria-controls="collapse{{ question.id }}">
+                                  عنوان سوال:
+                                  <span class="text-muted">{{ question.question_text }}</span>
+                                </button>
+                              </h2>
+                              <div id="collapse{{ question.id }}" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                  <div class="mb-3">
+                                    <label for="exampleFormControlTextarea1" class="form-label"></label>
+                                    {% if not question.is_answered %}
+                                    <form method="post" action="{% url 'answerQuestion'%}">
+                                      {% csrf_token %}
+                                      <input type="hidden" name="id" value="{{ question.id }}">
+                                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="جواب خود را بنویسید"></textarea>
+                                  </div>
+                                  <div class="col-md-12 mx-1">
+                                    <div class="d-flex flex-row-reverse">
+                                      <button type="submit" class="btn btn-outline-secondary">ارسال</button>
+                                    </form>
+                                    {% else %}
+                                      <p>Answer: {{ question.answer_text }}</p>
+                                    {% endif %}
+                                    </div>
                                   </div>
                                 </div>
                               </div>
                             </div>
-                          </div>
-                          {% endfor %}       
-                    </div>
-                    {% else %}
-                        <p>هیچ سوالی پرسیده نشده است</p>
-                    {% endif %}
+                            {% endfor %}       
+                      </div>
+                      {% else %}
+                          <p>هیچ سوالی پرسیده نشده است</p>
+                      {% endif %}
+                  </div>
+                </div>
+              </div>
+            <!--section5-->
+
+            <!--section6-->
+            <div class="container dashboard-section" id="section5">
+              <div class="d-flex flex-column justify-content-center">
+                  <div class="d-flex p-1 my-3 justify-content-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" fill="currentColor" class="bi bi-shield-lock" viewBox="0 0 16 16">
+                      <path d="M5.338 1.59a61.44 61.44 0 0 0-2.837.856.481.481 0 0 0-.328.39c-.554 4.157.726 7.19 2.253 9.188a10.725 10.725 0 0 0 2.287 2.233c.346.244.652.42.893.533.12.057.218.095.293.118a.55.55 0 0 0 .101.025.615.615 0 0 0 .1-.025c.076-.023.174-.061.294-.118.24-.113.547-.29.893-.533a10.726 10.726 0 0 0 2.287-2.233c1.527-1.997 2.807-5.031 2.253-9.188a.48.48 0 0 0-.328-.39c-.651-.213-1.75-.56-2.837-.855C9.552 1.29 8.531 1.067 8 1.067c-.53 0-1.552.223-2.662.524zM5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.775 11.775 0 0 1-2.517 2.453 7.159 7.159 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7.158 7.158 0 0 1-1.048-.625 11.777 11.777 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 62.456 62.456 0 0 1 5.072.56"/>
+                      <path d="M9.5 6.5a1.5 1.5 0 0 1-1 1.415l.385 1.99a.5.5 0 0 1-.491.595h-.788a.5.5 0 0 1-.49-.595l.384-1.99a1.5 1.5 0 1 1 2-1.415z"/>
+                    </svg>
+                  </div>
+                  <div class="d-flex flex-column justify-content-center text-center my-2">
+                      <div class="p-1"><strong>رمز عبور جدید خود را تعیین نمایید</strong></div>
+                      
+                  </div>
+                  <div class="d-flex justify-content-center my-4">
+      
+                      <div class="row col-md-3">
+                          <label for="inputPassword5" class="form-label">رمز عبور فعلی</label>
+                          <div class="w-100"></div>
+                          <input type="password" id="inputPassword5"  placeholder=" رمز عبور فعلی"class="form-control col-md-2" aria-describedby="passwordHelpBlock">
+                          <div class="w-100"></div>
+                          <div class="p-1"><small>رمز عبور باید حداقل 8 کاراکتر باشد</small></div>
+                          <label for="inputPassword5" class="form-label my-4">رمز عبور جدید</label>
+                          <div class="w-100"></div>
+                          <input type="password" id="inputPassword5" class="form-control col-md-2" aria-describedby="passwordHelpBlock"placeholder="رمز عبور جدید">
+                          <div class="w-100"></div>
+                          <input type="password" id="inputPassword5" class="form-control col-md-2 my-2" aria-describedby="passwordHelpBlock" placeholder="  تکرار رمز عبور جدید">
+                          <div class="w-100"></div>
+                          <button class="btn btn-primary"  type="button"> تغییر رمز عبور</button>
+                           <div class="w-100"></div>
+                           <a href="" class="my-3 link-underline-light">تغییر رمز عبور با کد یکبار مصرف</a>
+                      </div>
+      
+                  </div>
+              </div>
+              
+            </div>
+            <!--section7-->
+            <div class="container dashboard-section" id="section6">
+              <div class="d-flex flex-column">
+                <div>
+                  <h5>آیا مطمئن هستید می خواهید حساب خود را در سایت حذف کنید؟</h5>
+                </div>
+                <div>
+                  <button class="btn btn-primary" type="button">
+                    بله
+                  </button>
                 </div>
               </div>
             </div>
@@ -307,10 +380,15 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
       <script src="{%static 'js/dashboard.js'%}"></script>
-    
+   
       
 </body>
 </html>
 {%include 'includes/alerts.html'%}
 
 {%endblock%}
+
+
+
+
+
