--- a/templates/patients/patientDashboard.html
+++ b/templates/patients/patientDashboard.html
@@ -11,12 +11,6 @@
       <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/dashboard-rtl/">
     
       <meta charset="UTF-8">
-
-      <style>
-        /* body {
-      background-image: url(../static/bg5.jpg);
-    } */
-    </style>
       <title>پروفایل</title>
   </head>
   <body>
@@ -71,8 +65,20 @@
                 </li>
                 <li>
                   <a href="javascript:void(0)" class="nav-link link-body-emphasis" data-target="section5">
-                    <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
-                  
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-key" viewBox="0 0 16 16">
+                      <path d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0L13 9.207l-.646.647a.5.5 0 0 1-.708 0L11 9.207l-.646.647a.5.5 0 0 1-.708 0L9 9.207l-.646.647A.5.5 0 0 1 8 10h-.535A4 4 0 0 1 0 8m4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h.63l.853-.854a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.793-.793-1-1h-6.63a.5.5 0 0 1-.451-.285A3 3 0 0 0 4 5"/>
+                      <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                    </svg>
+                    تغییر رمز عبور
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" class="nav-link link-body-emphasis" data-target="section6">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-x" viewBox="0 0 16 16">
+                      <path d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m.256 7a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"/>
+                      <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m-.646-4.854.646.647.646-.647a.5.5 0 0 1 .708.708l-.647.646.647.646a.5.5 0 0 1-.708.708l-.646-.647-.646.647a.5.5 0 0 1-.708-.708l.647-.646-.647-.646a.5.5 0 0 1 .708-.708"/>
+                    </svg>
+                    حذف حساب
                   </a>
                 </li>
               </ul>
@@ -88,49 +94,43 @@
               </div>
             </div>
         </div>
+            <!--sections-->
             <div class="d-flex col-md-9 justify-content-center align-items-center">
-                <form action ="{% url 'pprofile' %}" class="row dashboard-section" method="post" enctype="multipart/form-data">
-                    {%csrf_token%}
-                    
-                    <div class="col-md-3">
-                      <label for="validationDefault01" class="form-label">نام</label>
-                      <input type="text" class="form-control" name="first_name" value='{{user.first_name}}' required>
-                    </div>
-
-                    <div class="col-md-3">
-                      <label for="validationDefault02" class="form-label">نام خانوادگی</label>
-                      <input type="text" class="form-control" name="last_name" value='{{user.last_name}}' required>
-                    </div>      
-                    
-                    <div class="col-md-3">
-                      <label for="validationDefault02" class="form-label">کد ملی</label>
-                      <input type="text" class="form-control" name="citizen_id" required>
-                    </div> 
-                    
-                    <div class="w-100"></div>
-                    <div class="col-md-4 mt-3 ">
-                      <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">ایمیل</label>
-                        <input type="email" class="form-control" name="email" value="{{user.email}}" required>
-                      </div>
-                    </div>
-                  
-                    <div class="col-md-4 mt-3 ms-4">
-                      <label for="validationDefault01" class="form-label">موبایل</label>
-                      <input class="form-control" type="text" name="phone_number" value="{{user.phone_number}}" required>
-                    </div>
-                
-                    <div class="col-md-3">
-                      <label for="validationDefault05" class="form-label">عکس پروفایل</label>
-                      <input type="file" class="form-control" name="profile_picture">
-                    </div>
-
-                  
-                    <div class="col-12 mt-3">
-                      <button class="btn btn-primary" type="submit">ثبت</button>
-                    </div>
-                  </form>
- 
+              <!--section1-->
+              <form action="{% url 'pprofile' %}" class="row dashboard-section" method="post" enctype="multipart/form-data" id="section1">
+                {% csrf_token %}
+            
+                <div class="col-md-3">
+                    <label for="validationDefault01" class="form-label">نام</label>
+                    <input type="text" class="form-control" name="first_name" value='{{user.first_name}}' required>
+                </div>
+            
+                <div class="col-md-3">
+                    <label for="validationDefault02" class="form-label">نام خانوادگی</label>
+                    <input type="text" class="form-control" name="last_name" value='{{user.last_name}}' required>
+                </div>
+            
+                <div class="col-md-3">
+                    <label for="validationDefault05" class="form-label">عکس پروفایل</label>
+                    <input type="file" class="form-control" name="profile_picture">
+                </div>
+            
+                <div class="col-md-5 mt-3">
+                    <label for="exampleFormControlInput1" class="form-label">ایمیل</label>
+                    <input type="email" class="form-control" name="email" value="{{user.email}}" required>
+                </div>
+            
+                <div class="col-md-4 mt-3">
+                    <label for="validationDefault01" class="form-label">موبایل</label>
+                    <input class="form-control" type="text" name="phone_number" value="{{user.phone_number}}" required>
+                </div>
+            
+                <div class="w-100"></div>
+            
+                <div class="col-12 mt-3">
+                    <button class="btn btn-primary" type="submit">ثبت</button>
+                </div>
+            </form>
 
                   <!--section 2-->
                   <div class="col-md-6 dashboard-section" id="section2">
@@ -169,9 +169,7 @@
                     </div>
                   </div>
                   <!--section3-->
-
-                  
-                  
+                
                   <div class="container w-50 dashboard-section" id="section3">
                     <form action="{% url 'showWalletInfo' %}" method="get"></form>
                     {% if wallet_is_activated %}
@@ -240,16 +238,127 @@
                   </form>
                 {% endif %}
               </div>
+                
+                <!--section4-->
+                <div class="container w-75 my-4 dashboard-section" id="section4">
+                  <div class="card rounded-5 shadow-lg ">
+                      <div class="card-body  text-primary">
+                          <div class="row justify-content-center ">
+                            <div class="col-md-12 text-center">
+                                <div class="row justify-content-center">
+                                    <hr class="col-md-4 mt-3">
+                                    <p class="col-md-2 text-primary">سوالات  من</p>
+                                    <hr class="col-md-4 mt-3">
+                                </div>
+                                
+                            </div>
+                            <div class="col-md-12  my-4 accordion-flush" id="accordionFlushExample1">
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                      عنوان سوال:
+                                      <span class="text-muted">متن سوال</span>
+                                    </button>
+                                  </h2>
+                                  <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body my-2 ">پاسخ:
+                                      <span class="text-muted">متن پاسخ</span>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12 mx-1">
+                              <div class="d-flex flex-row-reverse">
+                                <button type="button" class="btn btn-outline-secondary">حذف سوال</button>
+                              </div>
+                            </div>
+                            <div class="col-md-12  my-4 accordion-flush" id="accordionFlushExample">
+                              <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                  <button class="accordion-button collapsed mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseOne">
+                                    عنوان سوال:
+                                    <span class="text-muted">متن سوال</span>
+                                  </button>
+                                </h2>
+                                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                  <div class="accordion-body my-2 ">پاسخ:
+                                    <span class="text-muted">متن پاسخ</span>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-md-12 mx-1">
+                              <div class="d-flex flex-row-reverse">
+                                <button type="button" class="btn btn-outline-secondary">حذف سوال</button>
+                              </div>
+                            </div>
+                          </div>
+                          
+                      </div>
+                      
+          
+                </div>
+                
+          
+              </div>
+              <!--section5-->
+              <div class="container dashboard-section" id="section5">
+                <div class="d-flex flex-column justify-content-center">
+                    <div class="d-flex p-1 my-3 justify-content-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" fill="currentColor" class="bi bi-shield-lock" viewBox="0 0 16 16">
+                        <path d="M5.338 1.59a61.44 61.44 0 0 0-2.837.856.481.481 0 0 0-.328.39c-.554 4.157.726 7.19 2.253 9.188a10.725 10.725 0 0 0 2.287 2.233c.346.244.652.42.893.533.12.057.218.095.293.118a.55.55 0 0 0 .101.025.615.615 0 0 0 .1-.025c.076-.023.174-.061.294-.118.24-.113.547-.29.893-.533a10.726 10.726 0 0 0 2.287-2.233c1.527-1.997 2.807-5.031 2.253-9.188a.48.48 0 0 0-.328-.39c-.651-.213-1.75-.56-2.837-.855C9.552 1.29 8.531 1.067 8 1.067c-.53 0-1.552.223-2.662.524zM5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.775 11.775 0 0 1-2.517 2.453 7.159 7.159 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7.158 7.158 0 0 1-1.048-.625 11.777 11.777 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 62.456 62.456 0 0 1 5.072.56"/>
+                        <path d="M9.5 6.5a1.5 1.5 0 0 1-1 1.415l.385 1.99a.5.5 0 0 1-.491.595h-.788a.5.5 0 0 1-.49-.595l.384-1.99a1.5 1.5 0 1 1 2-1.415z"/>
+                      </svg>
+                    </div>
+                    <div class="d-flex flex-column justify-content-center text-center my-2">
+                        <div class="p-1"><strong>رمز عبور جدید خود را تعیین نمایید</strong></div>
+                        
+                    </div>
+                    <div class="d-flex justify-content-center my-4">
+                      <form method="post" action="{% url 'changePassword' %}">
+                        <div class="row col-md-3">
+                            <label for="inputPassword5" class="form-label">رمز عبور فعلی</label>
+                            <div class="w-100"></div>
+                            <input type="password" id="inputPassword5"  placeholder=" رمز عبور فعلی"class="form-control col-md-2" aria-describedby="passwordHelpBlock">
+                            <div class="w-100"></div>
+                            <div class="p-1"><small>رمز عبور باید حداقل 8 کاراکتر باشد</small></div>
+                            <label for="inputPassword5" class="form-label my-4">رمز عبور جدید</label>
+                            <div class="w-100"></div>
+                            <input type="password" id="inputPassword5" class="form-control col-md-2" aria-describedby="passwordHelpBlock"placeholder="رمز عبور جدید">
+                            <div class="w-100"></div>
+                            <input type="password" id="inputPassword5" class="form-control col-md-2 my-2" aria-describedby="passwordHelpBlock" placeholder="  تکرار رمز عبور جدید">
+                            <div class="w-100"></div>
+                            <button class="btn btn-primary"  type="button"> تغییر رمز عبور</button>
+                             <div class="w-100"></div>
+                        </div>
+                      </form>
+                    </div>
+                </div>
+                
+              </div>
+              <!--section6-->
+              <div class="container dashboard-section" id="section6">
+                <div class="d-flex flex-column">
+                  <div>
+                    <h5>آیا مطمئن هستید می خواهید حساب خود را در سایت حذف کنید؟</h5>
+                  </div>
+                  <div>
+                    <button class="btn btn-primary" type="button">
+                      بله
+                    </button>
+                  </div>
+                </div>
+              </div>
             </div>
       
           </div>
     
     
-        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <script src="{% static 'js/dashboard.js' %}"></script>      
-         
-        
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+      <script src="{%static 'js/dashboard.js'%}"></script>
+     
+
         <!-- Modal for increasing balance -->
         <div class="modal fade" id="increaseBalanceModal" tabindex="-1" role="dialog" aria-labelledby="increaseBalanceModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
@@ -278,8 +387,9 @@
           </div>
         </div>
        
+      
 </body>
 </html>
 {%include 'includes/alerts.html'%}
 
-{%endblock%}
+ {%endblock%}
